# ksd-moment

./: LICENSE  README.md  setup.cfg
ipynb/: mean_shift.ipynb  mean_shift_heavytail.ipynb  mixture_experiment_gauss-mode_vs_samplesize.ipynb  mixture_experiment_gauss-optim.ipynb  mixture_experiment_gauss.ipynb  ontarget_gauss_meanshift_target.ipynb  ontarget_gauss_varptb_target.ipynb  ontarget_studentt.ipynb  var_ptb.ipynb
ipynb/.ipynb_checkpoints/: mean_shift-checkpoint.ipynb  mean_shift_heavytail-checkpoint.ipynb  mixture_experiment_gauss-optim-checkpoint.ipynb
ksdmom/: __init__.py  sampler.py  thinning.py  util.py
