[metadata]
name = ksdmom
version = 0.1.0
author = noukoudashisoup
author_email = heishiro.kanagawa@gmail.com
description_file = README.md
keywords = machine-learning, statistics
# url = https://github.com/noukoudashisoup/
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Mathematics

[options]
packages = find:
install_requires = 
    numpy
    scipy
    matplotlib
python_requires = >= 3.9
